finish increase view when user view the event
