# packages/event/public/swagger.json
@@ -380,6 +380,32 @@
 					}
 				]
 			}
+		},
+		"/v1/events/{eventId}/update-view": {
+			"post": {
+				"operationId": "UpdateView",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "eventId",
+						"required": true,
+						"schema": {
+							"type": "string"
+						}
+					}
+				]
+			}
 		}
 	},
 	"servers": [
